# mikavn-library

./: .gitattributes  .gitignore  .rgignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_MODEL.md  DESIGN.md  ERROR_HANDLING.md  LICENSE  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: archives.rs  assets.rs  backups.rs  collections.rs  diagnostics.rs  filesystem.rs  games.rs  launcher.rs  logs.rs  metadata.rs  mod.rs  reports.rs  saves.rs  scanner.rs  search.rs  settings.rs  tasks.rs  tray.rs
src-tauri/src/db/: assets_ext.rs  collections_ext.rs  dashboard_ext.rs  game_merge_ext.rs  games_ext.rs  launch_ext.rs  library_roots_ext.rs  metadata_ext.rs  migrations.rs  mod.rs  models.rs  reports_ext.rs  saves_ext.rs  scanner_ext.rs  schema.rs  search_ext.rs  settings_ext.rs  tag_maintenance_ext.rs  tasks_ext.rs
src-tauri/src/infrastructure/: logger.rs  paths.rs
src-tauri/src/repositories/: asset_tags.rs  collections.rs  games.rs  launch.rs  library_roots.rs  metadata_cache.rs  metadata_ids.rs  metadata_matches.rs  metadata_sources.rs  mod.rs  saved_searches.rs  saves.rs  scanner_results.rs  settings.rs  tasks.rs
src-tauri/src/services/: archives.rs  assets.rs  backups.rs  backups_tests.rs  collections.rs  dashboard.rs  diagnostic_export.rs  diagnostics.rs  filesystem.rs  games.rs  image_health.rs  logs.rs  (+15 more)
(+312 files in other folders)
