[package]
name = "mikavn-library"
version = "0.1.5"
description = "A local Galgame and Visual Novel library manager."
authors = ["MikaVN contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "mikavn_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mikavn-library"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
regex = "1"
percent-encoding = "2"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
rusqlite = { version = "0.40", features = ["bundled"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
